--- a/index.html
+++ b/index.html
@@ -5,25 +5,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Desafio LEO</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
     <header>
-        <nav>
+        <nav class="container">
             <div class="brand"></div>
             <div class="search-field"></div>
             <div class="user"></div>
         </nav>
     </header>
     <main>
-        <section class="slider"></section>
-        <section class="courses"></section>
+        <section class="slider container"></section>
+        <section class="courses container"></section>
     </main>
     <footer>
-        <div class="footer-infos"></div>
-        <div class="footer-contact"></div>
-        <div class="footer-social-media"></div>
-        <div class="footer-copyright"></div>
+        <div class="footer-wapper">
+            <div class="container">
+                <section class="footer-infos">
+                    <img src="https://via.placeholder.com/200x100?Text=LEO" alt="">
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda magni autem maxime tenetur molestias aperiam dignissimos inventore aut! Ut sapiente pariatur aliquam laudantium possimus iste, voluptatibus distinctio consequatur? Reprehenderit, accusamus?</p>
+                </section>
+                <section class="footer-contact">
+                    <h6>Contato</h6>
+                    <p>(21) 98765-3434</p>
+                    <p>contato@leolearning.com</p>
+                </section>
+                <section class="footer-social-media">
+                    <h6>Redes Sociais</h6>
+                    <ul>
+                        <li><img src="https://via.placeholder.com/36" alt=""></li>
+                        <li><img src="https://via.placeholder.com/36" alt=""></li>
+                        <li><img src="https://via.placeholder.com/36" alt=""></li>
+                    </ul>
+                </section>
+            </div>
+        </div>
+        <div class="container footer-copyright"><p>Copyright 2017 - All right reserved</p></div>
     </footer>
+    <script src="script.min.js"></script>
 </body>
 </html>
