estrutura area main com card do curso e botao de adicionar curso

--- a/index.html
+++ b/index.html
@@ -17,7 +17,24 @@
     </header>
     <main>
         <section class="slider container"></section>
-        <section class="courses container"></section>
+        <section class="courses container">
+            <h3>Meus cursos</h3>
+            <hr>
+            <article class="card">
+                <img src="https://via.placeholder.com/70x50/FFFF000?Text=new" alt="" class="new-label">
+                <img src="https://via.placeholder.com/300x150" alt="">
+                <div class="card-wapper">
+                    <h4>Pellentesque malesuada</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <a href="#" class="button">Ver curso</a>
+                </div>
+            </article>
+            <div class="add-course-wapper">
+                <a href="#">
+                    <img src="https://via.placeholder.com/100x100?Text=AdicionarCurso" alt="">
+                </a>
+            </div>
+        </section>
     </main>
     <footer>
         <div class="footer-wapper">
