acerto do grid e adicao do responsivo para celular

--- a/index.html
+++ b/index.html
@@ -29,11 +29,47 @@
                     <a href="#" class="button">Ver curso</a>
                 </div>
             </article>
-            <div class="add-course-wapper">
+            <article class="card">
+                <img src="https://via.placeholder.com/70x50/FFFF000?Text=new" alt="" class="new-label">
+                <img src="https://via.placeholder.com/300x150" alt="">
+                <div class="card-wapper">
+                    <h4>Pellentesque malesuada</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <a href="#" class="button">Ver curso</a>
+                </div>
+            </article>
+            <article class="card">
+                <img src="https://via.placeholder.com/70x50/FFFF000?Text=new" alt="" class="new-label">
+                <img src="https://via.placeholder.com/300x150" alt="">
+                <div class="card-wapper">
+                    <h4>Pellentesque malesuada</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <a href="#" class="button">Ver curso</a>
+                </div>
+            </article>
+            <article class="card">
+                <img src="https://via.placeholder.com/70x50/FFFF000?Text=new" alt="" class="new-label">
+                <img src="https://via.placeholder.com/300x150" alt="">
+                <div class="card-wapper">
+                    <h4>Pellentesque malesuada</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <a href="#" class="button">Ver curso</a>
+                </div>
+            </article>
+            <article class="card">
+                <img src="https://via.placeholder.com/70x50/FFFF000?Text=new" alt="" class="new-label">
+                <img src="https://via.placeholder.com/300x150" alt="">
+                <div class="card-wapper">
+                    <h4>Pellentesque malesuada</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <a href="#" class="button">Ver curso</a>
+                </div>
+            </article>
+            <article class="card add-course-wapper">
                 <a href="#">
                     <img src="https://via.placeholder.com/100x100?Text=AdicionarCurso" alt="">
                 </a>
-            </div>
+            </article>
         </section>
     </main>
     <footer>
