Estrutura do slider

--- a/index.html
+++ b/index.html
@@ -16,7 +16,18 @@
         </nav>
     </header>
     <main>
-        <section class="slider container"></section>
+        <section class="slider">
+            <article class="slide" style="background-image:url('https://via.placeholder.com/200x100/FFFF00')">
+                <div class="container">
+                    <div class="card">
+                        <h2>Lorem Ipsum</h2>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure consequatur deleniti vitae eius, modi natus voluptatibus quia quam ratione, vel mollitia consectetur obcaecati maiores quasi est. Consequatur molestiae sunt officiis.</p>
+                        <a href="#" class="button">Ver Curso</a>
+                    </div>
+                </div>
+            </article>
+        </section>
+
         <section class="courses container">
             <h3>Meus cursos</h3>
             <hr>
