--- a/index.html
+++ b/index.html
@@ -17,15 +17,25 @@
     </header>
     <main>
         <section class="slider">
-            <article class="slide" style="background-image:url('https://via.placeholder.com/200x100/FFFF00')">
-                <div class="container">
-                    <div class="card">
-                        <h2>Lorem Ipsum</h2>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure consequatur deleniti vitae eius, modi natus voluptatibus quia quam ratione, vel mollitia consectetur obcaecati maiores quasi est. Consequatur molestiae sunt officiis.</p>
-                        <a href="#" class="button">Ver Curso</a>
+            <div class="slides">
+                <article class="slide" style="background-image:url('https://via.placeholder.com/200x100/FFFF00')">
+                    <div class="container">
+                        <div class="card">
+                            <h2>Lorem Ipsum</h2>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure consequatur deleniti vitae eius, modi natus voluptatibus quia quam ratione, vel mollitia consectetur obcaecati maiores quasi est. Consequatur molestiae sunt officiis.</p>
+                            <a href="#" class="button">Ver Curso</a>
+                        </div>
                     </div>
-                </div>
-            </article>
+                </article>
+            </div>
+            <div class="slider-controls">
+                <a class="left_arrow" href="#">
+                    <img src="img/arrow_left.png" alt="">
+                </a>
+                <a class="right_arrow" href="#">
+                    <img src="img/arrow_right.png" alt="">
+                </a>
+            </div>
         </section>
 
         <section class="courses container">
