--- a/index.html
+++ b/index.html
@@ -18,7 +18,25 @@
     <main>
         <section class="slider">
             <div class="slides">
-                <article class="slide" style="background-image:url('https://via.placeholder.com/200x100/FFFF00')">
+                <article class="slide active" style="background-image:url('https://via.placeholder.com/200x100/FFFF00')">
+                    <div class="container">
+                        <div class="card">
+                            <h2>Lorem Ipsum</h2>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure consequatur deleniti vitae eius, modi natus voluptatibus quia quam ratione, vel mollitia consectetur obcaecati maiores quasi est. Consequatur molestiae sunt officiis.</p>
+                            <a href="#" class="button">Ver Curso</a>
+                        </div>
+                    </div>
+                </article>
+                <article class="slide" style="background-image:url('https://via.placeholder.com/200x100/0062FF')">
+                    <div class="container">
+                        <div class="card">
+                            <h2>Lorem Ipsum</h2>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure consequatur deleniti vitae eius, modi natus voluptatibus quia quam ratione, vel mollitia consectetur obcaecati maiores quasi est. Consequatur molestiae sunt officiis.</p>
+                            <a href="#" class="button">Ver Curso</a>
+                        </div>
+                    </div>
+                </article>
+                <article class="slide" style="background-image:url('https://via.placeholder.com/200x100/00FF0D')">
                     <div class="container">
                         <div class="card">
                             <h2>Lorem Ipsum</h2>
