Header com estrutura e responsivo

--- a/index.html
+++ b/index.html
@@ -10,9 +10,23 @@
 <body>
     <header>
         <nav class="container">
-            <div class="brand"></div>
-            <div class="search-field"></div>
-            <div class="user"></div>
+            <div class="brand">
+                <img src="img/leo_logo_black.png" alt="LEO logo" class="img-brand">
+            </div>
+            <div class="user">
+                <img src="img/avatar.png" alt="Avatar">
+                <div class="content">
+                    <span>Seja bem-vindo</span>
+                    <em><b>Jonh Doe</b></em>
+                </div>
+                <button>&#9660</button>
+            </div>
+            <div class="search-field">
+                <form action="#">
+                    <input type="search" name="query" placeholder="Pesquisar por...">
+                    <input type="submit" value="">
+                </form>
+            </div>
         </nav>
     </header>
     <main>
