Estrutura do modal

--- a/index.html
+++ b/index.html
@@ -149,6 +149,17 @@
         </div>
         <div class="container footer-copyright"><p>Copyright 2017 - All right reserved</p></div>
     </footer>
+    <section class="modal_block">
+        <div class="modal">
+            <img src="img/modal_photo.jpg" alt="">
+            <button class="quit_button"></button>
+            <div class="login">
+                <h2>Engestas torotr valpuatete</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos, eos facere! Officiis aperiam fuga sequi ab facere inventore deserunt quos! Reiciendis cum rerum et a atque vitae ratione quasi voluptas!</p>
+                <a href="" class="button">Inscrever-se</a>
+            </div>
+        </div>
+    </section>
     <script src="script.min.js"></script>
 </body>
 </html>
