Formulario de adicionar curso e LocalStorage

--- a/index.html
+++ b/index.html
@@ -71,58 +71,75 @@
         </section>
 
         <section class="courses container">
-            <h3>Meus cursos</h3>
-            <hr>
-            <article class="card">
-                <img src="https://via.placeholder.com/70x50/FFFF000?Text=new" alt="" class="new-label">
-                <img src="https://via.placeholder.com/300x150" alt="">
-                <div class="card-wapper">
-                    <h4>Pellentesque malesuada</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <a href="#" class="button">Ver curso</a>
-                </div>
-            </article>
-            <article class="card">
-                <img src="https://via.placeholder.com/70x50/FFFF000?Text=new" alt="" class="new-label">
-                <img src="https://via.placeholder.com/300x150" alt="">
-                <div class="card-wapper">
-                    <h4>Pellentesque malesuada</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <a href="#" class="button">Ver curso</a>
-                </div>
-            </article>
-            <article class="card">
-                <img src="https://via.placeholder.com/70x50/FFFF000?Text=new" alt="" class="new-label">
-                <img src="https://via.placeholder.com/300x150" alt="">
-                <div class="card-wapper">
-                    <h4>Pellentesque malesuada</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <a href="#" class="button">Ver curso</a>
-                </div>
-            </article>
-            <article class="card">
-                <img src="https://via.placeholder.com/70x50/FFFF000?Text=new" alt="" class="new-label">
-                <img src="https://via.placeholder.com/300x150" alt="">
-                <div class="card-wapper">
-                    <h4>Pellentesque malesuada</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <a href="#" class="button">Ver curso</a>
-                </div>
-            </article>
-            <article class="card">
-                <img src="https://via.placeholder.com/70x50/FFFF000?Text=new" alt="" class="new-label">
-                <img src="https://via.placeholder.com/300x150" alt="">
-                <div class="card-wapper">
-                    <h4>Pellentesque malesuada</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <a href="#" class="button">Ver curso</a>
-                </div>
-            </article>
-            <article class="card add-course-wapper">
-                <a href="#">
-                    <img src="https://via.placeholder.com/100x100?Text=AdicionarCurso" alt="">
-                </a>
-            </article>
+            
+            <div class="courses_list">
+                <h3>Meus cursos</h3>
+                <hr>
+                <article class="card">
+                    <img src="https://via.placeholder.com/70x50/FFFF000?Text=new" alt="" class="new-label">
+                    <img src="https://via.placeholder.com/300x150" alt="">
+                    <div class="card-wapper">
+                        <h4>Pellentesque malesuada</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <a href="#" class="button">Ver curso</a>
+                    </div>
+                </article>
+                <article class="card">
+                    <img src="https://via.placeholder.com/70x50/FFFF000?Text=new" alt="" class="new-label">
+                    <img src="https://via.placeholder.com/300x150" alt="">
+                    <div class="card-wapper">
+                        <h4>Pellentesque malesuada</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <a href="#" class="button">Ver curso</a>
+                    </div>
+                </article>
+                <article class="card">
+                    <img src="https://via.placeholder.com/70x50/FFFF000?Text=new" alt="" class="new-label">
+                    <img src="https://via.placeholder.com/300x150" alt="">
+                    <div class="card-wapper">
+                        <h4>Pellentesque malesuada</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <a href="#" class="button">Ver curso</a>
+                    </div>
+                </article>
+                <article class="card">
+                    <img src="https://via.placeholder.com/70x50/FFFF000?Text=new" alt="" class="new-label">
+                    <img src="https://via.placeholder.com/300x150" alt="">
+                    <div class="card-wapper">
+                        <h4>Pellentesque malesuada</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <a href="#" class="button">Ver curso</a>
+                    </div>
+                </article>
+                <article class="card">
+                    <img src="https://via.placeholder.com/70x50/FFFF000?Text=new" alt="" class="new-label">
+                    <img src="https://via.placeholder.com/300x150" alt="">
+                    <div class="card-wapper">
+                        <h4>Pellentesque malesuada</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <a href="#" class="button">Ver curso</a>
+                    </div>
+                </article>
+                <article class="card add-course-wapper">
+                    <a href="#">
+                        <img src="img/add_course.png" alt="">
+                        Adicionar Curso
+                    </a>
+                </article>
+            </div>
+            <div class="add_course_section" style="display:none">
+                <h3>Adicionar Curso</h3>
+                <hr>
+                <form action="#">
+                    <label for="title">Nome</label>
+                    <input type="text" name="title">
+                    <label for="description">Descrição</label>
+                    <textarea name="description" cols="30" rows="10"></textarea>
+                    <label for="banner">Upload do Banner</label>
+                    <input type="file" name="banner" accept="image/x-png,image/gif,image/jpeg">
+                    <input type="submit" value="Salvar">
+                </form>
+            </div>
         </section>
     </main>
     <footer>
