Slider recurando dados da API pronto

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <main>
         <section class="slider">
             <div class="slides">
-                <article class="slide active" style="background-image:url('https://via.placeholder.com/200x100/FFFF00')">
+                <!-- <article class="slide active" style="background-image:url('https://via.placeholder.com/200x100/FFFF00')">
                     <div class="container">
                         <div class="card">
                             <h2>Lorem Ipsum</h2>
@@ -40,8 +40,8 @@
                             <a href="#" class="button">Ver Curso</a>
                         </div>
                     </div>
-                </article>
-                <article class="slide" style="background-image:url('https://via.placeholder.com/200x100/0062FF')">
+                </article> -->
+                <!-- <article class="slide" style="background-image:url('https://via.placeholder.com/200x100/0062FF')">
                     <div class="container">
                         <div class="card">
                             <h2>Lorem Ipsum</h2>
@@ -49,8 +49,8 @@
                             <a href="#" class="button">Ver Curso</a>
                         </div>
                     </div>
-                </article>
-                <article class="slide" style="background-image:url('https://via.placeholder.com/200x100/00FF0D')">
+                </article> -->
+                <!-- <article class="slide" style="background-image:url('https://via.placeholder.com/200x100/00FF0D')">
                     <div class="container">
                         <div class="card">
                             <h2>Lorem Ipsum</h2>
@@ -58,7 +58,7 @@
                             <a href="#" class="button">Ver Curso</a>
                         </div>
                     </div>
-                </article>
+                </article> -->
             </div>
             <div class="slider-controls">
                 <a class="left_arrow" href="#">
