API salvando dados com POST

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             <button class="quit_button"></button>
             <div class="login">
                 <h2>Engestas torotr valpuatete</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos, eos facere! Officiis aperiam fuga sequi ab facere inventore deserunt quos! Reiciendis cum rerum et a atque vitae ratione quasi voluptas!</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos, eos facere! </p>
                 <a href="" class="button">Inscrever-se</a>
             </div>
         </div>
