Ajuste no css dos cursos

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <article class="card add-course-wapper">
                     <a href="#">
                         <img src="img/add_course.png" alt="">
-                        Adicionar Curso
+                        Adicionar <strong>Curso</strong>
                     </a>
                 </article>
             </div>
