--- a/index.html
+++ b/index.html
@@ -16,10 +16,16 @@
             <div class="user">
                 <img src="img/avatar.png" alt="Avatar">
                 <div class="content">
-                    <span>Seja bem-vindo</span>
-                    <em><b>Jonh Doe</b></em>
+                    <small>Seja bem-vindo</small>
+                    <span>Jonh Doe</span>
                 </div>
                 <button>&#9660</button>
+                <nav class="navbar" style="display:none">
+                    <button>&#9650</button>
+                    <ul>
+                        <li><a href="#" class="button">Logout</a></li>
+                    </ul>
+                </nav>
             </div>
             <div class="search-field">
                 <form action="#">
