--- a/index.html
+++ b/index.html
@@ -74,6 +74,12 @@
                     <img src="img/arrow_right.png" alt="">
                 </a>
             </div>
+            <div class="dot-controls">
+                <!-- <ul>
+                    <li><a class="active" href="#">&#9711</a></li>
+                    <li><a href="#">&#9711</a></li>
+                </ul> -->
+            </div>
         </section>
 
         <section class="courses container">
@@ -98,8 +104,8 @@
                     </a>
                 </article>
             </div>
-            <!-- <div class="add_course_section" style="display:none"> -->
-            <div class="add_course_section" >
+            <div class="add_course_section" style="display:none">
+            <!-- <div class="add_course_section" > -->
                 <h3>Adicionar Curso</h3>
                 <hr>
                 <form action="http://leo.api/api/create_course.php" method="POST" name="add" enctype="multipart/form-data">
@@ -110,6 +116,7 @@
                     <label for="banner">Upload do Banner</label>
                     <input type="file" name="banner" accept="image/x-png,image/gif,image/jpeg">
                     <input type="submit" value="Salvar">
+                    <button class="button close_add_form"></button>
                 </form>
             </div>
         </section>
